Deprecate transaction endpoint
